Fixed scrollbar issue and color

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,6 +18,10 @@
     font-style: normal;
 }
 
+:root {
+    color-scheme: dark;
+}
+
 .dropdown-menu-arrow::before {
     content: "";
     position: absolute;
